adding first script of body visibility

--- a/index.html
+++ b/index.html
@@ -39,5 +39,7 @@
     <section class="conatiner" id="main_contaier_5">
 
     </section>
+
+    <script src="./index.js"></script>
 </body>
 </html>
